# dealii-cuda

./: CMakeLists.txt  README.md  bm_dot.cpp  bmop-cpu.cc  bmop.cu  bmop_common.h  bmop_mg.cu  bmop_mg_cpu.cc  bmop_spm.cu  bmscript-cpu.sh  bmscript.sh  elasticity.cc  elasticity.cu  filter_results.sh  laplace_operator_cpu.cc  laplace_operator_cpu.h  laplace_operator_gpu.h  poisson.cu  poisson_common.cc  poisson_common.h  poisson_cpu.cc  poisson_mg.cu  poisson_mg_cpu.cc  poisson_spm.cu  print-meshes.cc  test_dot.cpp  test_elasticity.cc  test_gpu_vec.cpp  test_gpuarray.cu  test_hanging_node_interpolation.cu  test_hanging_nodes_gpu.cu  test_laplace_op.cpp  test_laplace_op.cu  test_mg.cc  test_mg.cpp  test_partitioner.cc  test_spm.cu
bmop-cpu/: CMakeLists.txt  bmop-cpu.cc
matrix_free_gpu/: CMakeLists.txt  atomic.cuh  coloring.cc  coloring.h  constraint_handler_gpu.cu  constraint_handler_gpu.h  cuda_memory_utils.cu  cuda_memory_utils.h  cuda_sparse_matrix.cu  cuda_sparse_matrix.h  cuda_utils.cuh  defs.h  fee_gpu.cuh  gpu_array.cuh  gpu_list.cu  gpu_list.h  gpu_partitioner.cc  gpu_partitioner.h  gpu_vec.cu  gpu_vec.h  hanging_nodes.cuh  matrix_free_gpu.cu  matrix_free_gpu.h  maybecuda.h  mg_transfer_matrix_free_gpu.cu  mg_transfer_matrix_free_gpu.h  multi_gpu_list.cu  multi_gpu_list.h  multi_gpu_vec.cu  multi_gpu_vec.h  tensor_ops.cuh  timing.cu  timing.h
opbm-cpu/: CMakeLists.txt  opbm.cc
scripts/: bmscript-cpu.sh  bmscript.sh  filter_results.sh  mgbmscript.sh  setup_build.sh
